--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <img class="first-slide" src="images/banner.jpg" alt="First slide">
                     <div class="container">
                         <div class="carousel-caption relative">
-                            <span>All New Phones Ranjeet Testing 567</span>
+                            <span>All New Phones Ranjeet Testing Git</span>
                             <h1>up to 25% Flat Sale</h1>
                             <p>It is a long established fact that a reader will be distracted by the readable content
                                 <br> of a page when looking at its layout. The point of using Lorem Ipsum is that</p>
